# Retr0Gram

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  gitmodules
Core/: main.cpp
Core/includes/: Headers.h  Requests.hpp  TGBotFunc.hpp  Telegram.hpp
Core/src/: Requests.cpp  Telegram.cpp
src/: CMakeLists.txt  Headers.h  main.cpp
src/Core/: CMakeLists.txt  main.cpp
src/Core/includes/: Debug.hpp  Requests.hpp  Telegram.hpp
src/Core/src/: Requests.cpp  Telegram.cpp
src/Demo/: CMakeLists.txt
src/Demo/src/: main.cpp
